--- a/app/.gitignore
+++ b/app/.gitignore
@@ -1,1 +1,13 @@
-/build
+# Gradle files
+.gradle/
+build/
+
+# Android Studio files
+.idea/
+*.iml
+*.ipr
+*.iws
+
+# Emulator-related files
+*.lock
+avd/
